--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "scraper",
   "version": "0.1.0",
-  "description": "",
+  "description": "a scraper for pnr statu",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
