--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
     "request": "^2.88.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.11"
   }
 }
