--- a/services/config.json
+++ b/services/config.json
@@ -35,7 +35,7 @@
             "description": "a test service", 
             "service": "railyatri.js", 
             "enabled" : true,
-            "stub": false, 
+            "stub": true, 
             "stub_file": "stubs/railyatri_response.html"
         } 
     ]
