--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "prod": "node dist/api.bundle.js"
   },
   "keywords": [],
   "author": "",
@@ -13,11 +15,12 @@
   "dependencies": {
     "axios": "^0.19.0",
     "cheerio": "^1.0.0-rc.2",
-    "cookie-parser": "^1.4.4",
-    "express": "^4.16.4",
-    "request": "^2.88.0"
+    "cookie-parser": "^1.4.5",
+    "express": "^4.17.1",
+    "webpack": "^4.42.1"
   },
   "devDependencies": {
-    "nodemon": "^1.18.11"
+    "nodemon": "^1.18.11",
+    "webpack-cli": "^3.3.11"
   }
 }
