--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "devDependencies": {
     "nodemon": "^1.18.11",
     "webpack-cli": "^3.3.11"
+  },
+  "engines": {
+    "node": "10.x"
   }
 }
